# Labs_term_3

./: README.md
Lab3Dynemic/: .gitignore  Dialog.cpp  Dialog.h  Prog3.cpp  Prog3.h  Task.txt  Test.cpp
Lab3_External/: CMakeLists.txt  Dialog.cpp  Dialog.h  Test.cpp  Vector.cpp  Vector.h  main.cpp
Lab4/: .gitignore  Bot.cpp  CMakeLists.txt  Console.cpp  Console.h  Mission.cpp  Mission.h  Ship.cpp  Ship.h  Table.cpp  Table.h  TestMission.cpp  TestShip.cpp  UnordedNode.h  UnordedNodeTest.cpp  main.cpp
Lab4/Images/: DU3_2021.doc
Lab_1/: Alg.h  Prog1.cpp  Prog1.h  README.md  main.cpp
Lab_2/: .gitignore  Prog2.cpp  Prog2.h  README.md  Test.cpp  main.cpp
Lab_3/: Dialog.cpp  Dialog.h  Prog3.cpp  Prog3.h  README.md  Test.cpp  main.cpp
